force-app/main/default/objects/Shipment_Invoice__c/Shipment_Invoice__c.object-meta.xml
<CustomObject>
    <label>Shipment Invoice</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Shipment Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>