force-app/main/default/objects/Shipment_Invoice__c/fields/Balance_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount2__c</fullName>
    <formula>Invoice_Amount__c -   Total_Payments_on_invoices_Including_TD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>