force-app/main/default/objects/Shipment_Invoice__c/fields/Balance_Amount_To_Be_Collected__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_To_Be_Collected__c</fullName>
    <label>Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>