force-app/main/default/objects/Shipment_Invoice__c/fields/Invoice_Doc_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Doc_URL__c</fullName>
    <label>Invoice Doc URL</label>
    <type>Url</type>
</CustomField>