force-app/main/default/objects/Shipment_Invoice__c/fields/Invoice_Payment_Status_Custom__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Status_Custom__c</fullName>
    <formula>IF( Total_Payment_on_Invoices_Excluding_TDS__c = 0, &apos;Unpaid&apos;,
IF( Total_Payment_on_Invoices_Excluding_TDS__c &gt; 0 &amp;&amp; Total_Payments_on_invoices_Including_TD__c &lt; Invoice_Amount__c, &apos;Partially Paid&apos;,
IF( Total_Payments_on_invoices_Including_TD__c  &gt;= Invoice_Amount__c , &apos;Paid&apos;,null )))</formula>
    <label>Invoice Payment Status</label>
    <type>Text</type>
</CustomField>