force-app/main/default/objects/Shipment_Invoice__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Shipment Invoices</relationshipLabel>
    <relationshipName>Shipment_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>