force-app/main/default/objects/Shipment_Invoice__c/fields/Total_Payment_on_Invoices_Excluding_TDS__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_on_Invoices_Excluding_TDS__c</fullName>
    <label>Total Payment on Invoices(Excluding TDS)</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Payment_Type__c</field>
        <operation>notContain</operation>
        <value>TDS</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Shipment_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>