force-app/main/default/objects/Shipment_Invoice__c/fields/Total_Payments_on_invoices_Including_TD__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_on_invoices_Including_TD__c</fullName>
    <label>Total Payment on Invoices(Including TDS)</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Shipment_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>